--- a/user_admin/profile_kehadiran.html
+++ b/user_admin/profile_kehadiran.html
@@ -18,7 +18,7 @@ License: You must have a valid license purchased only from themeforest(the above
 	<head>
 		<base href="../">
 		<meta charset="utf-8" />
-		<title>Detail Customer | Admin Fabulash</title>
+		<title>Kehadiran | Admin Fabulash</title>
 		<meta name="description" content="Updates and statistics">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -141,7 +141,7 @@ License: You must have a valid license purchased only from themeforest(the above
 										</ul>
 									</div>
 								</li>
-								<li class="kt-menu__item kt-menu__item--active" aria-haspopup="true"><a href="user_admin/customer.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+								<li class="kt-menu__item" aria-haspopup="true"><a href="user_admin/customer.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 								    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 								        <polygon id="Shape" points="0 0 24 0 24 24 0 24"/>
 								        <path d="M18,14 C16.3431458,14 15,12.6568542 15,11 C15,9.34314575 16.3431458,8 18,8 C19.6568542,8 21,9.34314575 21,11 C21,12.6568542 19.6568542,14 18,14 Z M9,11 C6.790861,11 5,9.209139 5,7 C5,4.790861 6.790861,3 9,3 C11.209139,3 13,4.790861 13,7 C13,9.209139 11.209139,11 9,11 Z" id="Combined-Shape" fill="#000000" fill-rule="nonzero" opacity="0.3"/>
@@ -172,7 +172,7 @@ License: You must have a valid license purchased only from themeforest(the above
 										</ul>
 									</div>
 								</li>
-								<li class="kt-menu__item  kt-menu__item--submenu" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+								<li class="kt-menu__item  kt-menu__item--submenu kt-menu__item--open kt-menu__item--here" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 								    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 								        <polygon id="Shape" points="0 0 24 0 24 24 0 24"/>
 								        <path d="M12,11 C9.790861,11 8,9.209139 8,7 C8,4.790861 9.790861,3 12,3 C14.209139,3 16,4.790861 16,7 C16,9.209139 14.209139,11 12,11 Z" id="Mask" fill="#000000" fill-rule="nonzero" opacity="0.3"/>
@@ -182,7 +182,7 @@ License: You must have a valid license purchased only from themeforest(the above
 									<div class="kt-menu__submenu "><span class="kt-menu__arrow"></span>
 										<ul class="kt-menu__subnav">
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_admin/profile_biodata.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Biodata</span></a></li>
-											<li class="kt-menu__item " aria-haspopup="true"><a href="user_admin/profile_kehadiran.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Kehadiran</span></a></li>
+											<li class="kt-menu__item kt-menu__item--active" aria-haspopup="true"><a href="user_admin/profile_kehadiran.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Kehadiran</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_admin/profile_payroll.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Payroll</span></a></li>
 										</ul>
 									</div>
@@ -304,13 +304,13 @@ License: You must have a valid license purchased only from themeforest(the above
 							<div class="kt-container  kt-container--fluid ">
 								<div class="kt-subheader__main">
 									<h3 class="kt-subheader__title">
-										Customer </h3>
+										Profile </h3>
 									<span class="kt-subheader__separator kt-hidden"></span>
 									<div class="kt-subheader__breadcrumbs">
-										<a href="user_admin/customer.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
+										<a href="user_admin/profile_kehadiran.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
 										<span class="kt-subheader__breadcrumbs-separator"></span>
-										<a href="user_admin/customer_detail.html" class="kt-subheader__breadcrumbs-link">
-											Customer Details </a>
+										<a href="user_admin/profile_kehadiran.html" class="kt-subheader__breadcrumbs-link">
+											Kehadiran </a>
 									</div>
 								</div>
 							</div>
@@ -323,63 +323,134 @@ License: You must have a valid license purchased only from themeforest(the above
 
                             <div class="row row-centered">
 
+                                <div class="col-12">
+									<div class="row">
+		                                <div class="col-lg-3 col-md-6">
+		                                    <div class="kt-portlet kt-portlet--height-fluid">
+		                                    	<div class="kt-widget14">
+		                                    		<div class="kt-widget14__header" style="margin-bottom:0px;">
+		                                    			<h6>
+		                                    				Total Hari Kerja
+		                                    			</h6>
+		                                    			<h3 class="kt-widget14__desc kt-margin-t-5 color-main-dark">
+		                                    				<span name="kehadiran_kerja">200</span><span> Hari</span>
+		                                    			</h3>
+		                                    		</div>
+		                                    	</div>
+		                                    </div>
+		                                </div>
+		                                <div class="col-lg-3 col-md-6">
+		                                    <div class="kt-portlet kt-portlet--height-fluid">
+		                                    	<div class="kt-widget14">
+		                                    		<div class="kt-widget14__header" style="margin-bottom:0px;">
+		                                    			<h6>
+		                                    				Sisa Cuti
+		                                    			</h6>
+		                                    			<h3 class="kt-widget14__desc kt-margin-t-5 color-main-dark">
+		                                    				<span name="kehadiran_cuti">20</span><span> Hari</span>
+		                                    			</h3>
+		                                    		</div>
+		                                    	</div>
+		                                    </div>
+		                                </div>
+		                                <div class="col-lg-3 col-md-6">
+		                                    <div class="kt-portlet kt-portlet--height-fluid">
+		                                    	<div class="kt-widget14">
+		                                    		<div class="kt-widget14__header" style="margin-bottom:0px;">
+		                                    			<h6>
+		                                    				Jumlah Izin
+		                                    			</h6>
+		                                    			<h3 class="kt-widget14__desc kt-margin-t-5 color-main-dark">
+		                                    				<span name="kehadiran_izin">10</span><span> Hari</span>
+		                                    			</h3>
+		                                    		</div>
+		                                    	</div>
+		                                    </div>
+		                                </div>
+		                                <div class="col-lg-3 col-md-6">
+		                                    <div class="kt-portlet kt-portlet--height-fluid">
+		                                    	<div class="kt-widget14">
+		                                    		<div class="kt-widget14__header" style="margin-bottom:0px;">
+		                                    			<h6>
+		                                    				Jumlah Sakit
+		                                    			</h6>
+		                                    			<h3 class="kt-widget14__desc kt-margin-t-5 color-main-dark">
+		                                    				<span name="kehadiran_sakit">5</span><span> Hari</span>
+		                                    			</h3>
+		                                    		</div>
+		                                    	</div>
+		                                    </div>
+		                                </div>
+									</div>
+								</div>
+
 								<div class="col-12">
 
                                     <!--begin::Portlet-->
-									<div class="kt-portlet" id="print-section">
+									<div class="kt-portlet">
 										<div class="kt-portlet__head">
 											<div class="kt-portlet__head-label">
 												<span class="kt-portlet__head-icon">
 													<i class="flaticon2-user-outline-symbol"></i>
 												</span>
 												<h3 class="kt-portlet__head-title">
-													Customer Details
+													Kehadiran
 												</h3>
+											</div>
+                                            <div class="kt-portlet__head-toolbar">
+												<button type="button" class="btn btn-sm btn-success" data-toggle="modal" data-target="#kt_modal_request_dayoff"><i class="flaticon2-graphic-design"></i> Request Day-Off</button>
 											</div>
 										</div>
 										<div class="kt-portlet__body">
-                                            <div class="row" style="margin-bottom:20px;">
-												<div class="col-6">
-	                                                <h5 class="color-main-dark" name="customer_nama">Darnilla</h5>
-	                                                <span class="kt-font-bold" name="customer_nohp">081342497228</span>&nbsp;<br>
-	                                                <span class="kt-font-bold" name="customer_alamat">Jl. Areopala 6</span>&nbsp;<br>
-	                                                <span class="kt-font-bold">Lahir <span name="customer_tanggalLahir"></span>09 April 1997</span>&nbsp;<br>
-	                                                <span class="kt-font-bold">Sejak <span name="customer_membership"></span>02 Oktober 2019</span>&nbsp;<br>
-												</div>
-												<div class="col-6">
-													<div class="row">
-														<div class="col-12" style="text-align: right; margin-bottom:5px;">
-															<button class="col-4 btn btn-warning" onclick="printFunction()">Print</button>
-														</div>
-														<div class="col-12" style="text-align: right;">
-															<button class="col-4 btn btn-success">Agreement</button>
-														</div>
-													</div>
-												</div>
-                                            </div>
-
-											<form class="kt-margin-b-10">
-    											<div class="row justify-space-between">
-													<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
-														<input readonly type="text" class="form-control kt-input" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu"/>
-														<div class="input-group-append">
-															<span class="input-group-text">
-																<i class="la la-calendar"></i>
-															</span>
-														</div>
-													</div>
-													<div class="col-lg-4 col-sm-6">
-	    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
-													</div>
-    											</div>
-    										</form>
-                                            <table class="table table-bordered table-hover table-checkable" id="table_customer_detail"></table>
+                                            <table class="table table-bordered table-hover table-checkable" id="table_kehadiran"></table>
 										</div>
 									</div>
 
 									<!--end::Portlet-->
 								</div>
 							</div>
+
+                            <!-- begin:: Modal -->
+                            <div class="modal fade" id="kt_modal_request_dayoff" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLabel">Request Day-Off</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            </button>
+                                        </div>
+										<form id="kt_form_dayoff">
+	                                        <div class="modal-body">
+                                                <div class="form-group row">
+                                                    <label for="example-text-input" class="col-3 col-form-label">Tanggal</label>
+                                                    <div class="col-9">
+                                                        <input type="text" class="form-control kt_multidatepicker" placeholder="Tanggal" name="dayoff_tanggal">
+                                                    </div>
+                                                </div>
+                                                <div class="form-group row">
+                                                    <label for="example-text-input" class="col-3 col-form-label">Status</label>
+                                                    <div class="col-9">
+                                                        <select class="form-control" name="dayoff_status" placeholder="Status">
+                                                            <option value="" disabled selected>Status</option>
+    														<option>Cuti Tahunan</option>
+    														<option>Izin</option>
+    														<option>Sakit</option>
+    														<option>Lain-lain</option>
+    													</select>
+                                                    </div>
+                                                </div>
+	                                        </div>
+	                                        <div class="modal-footer" style="justify-content:center;">
+	                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+	                                            <button type="submit" class="btn btn-success" id="kt_sweetalert_berhasil">Submit</button>
+	                                        </div>
+										</form>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!--end::Modal-->
+
 						</div>
 
 						<!-- end:: Content -->
@@ -455,12 +526,43 @@ License: You must have a valid license purchased only from themeforest(the above
 
 		<!--begin::Page Scripts(used by this page) -->
         <script src="assets/js/script/datatable_admin.js"></script>
+		<script src="assets/js/custom/datepicker.js" type="text/javascript"></script>
 
-		<script>
-			function printFunction() {
-			window.print();
-			}
-		</script>
+        <script>
+            // Sweetalert
+            $('#kt_sweetalert_berhasil').click(function(e) {
+                swal.fire({
+                    title: "Berhasil",
+                    text: "Request day-off berhasil dilakukan.",
+                    type: "success",
+                    confirmButtonText: "Ok",
+                    confirmButtonClass: "btn btn-brand"
+                }).then(function(result) {
+                    // location.reload();
+                });
+            });
+
+            // Form Validation
+            $('#kt_form_dayoff').validate({
+                // define validation rules
+	            rules: {
+	                dayoff_tanggal: {
+	                    required: true,
+	                },
+	                dayoff_status: {
+	                    required: true
+	                }
+	            },
+
+	            invalidHandler: function(event, validator) {
+	                KTUtil.scrollTop();
+	            },
+	            submitHandler: function(form) {
+	                //form[0].submit(); // submit the form
+	            }
+            })
+
+        </script>
 
 		<!--end::Page Scripts -->
 	</body>
