--- a/user_supervisor_studio/profile_biodata.html
+++ b/user_supervisor_studio/profile_biodata.html
@@ -18,7 +18,7 @@ License: You must have a valid license purchased only from themeforest(the above
 	<head>
 		<base href="../">
 		<meta charset="utf-8" />
-		<title>Dashboard | Supervisor Studio Fabulash</title>
+		<title>Biodata | Supervisor Studio Fabulash</title>
 		<meta name="description" content="Updates and statistics">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -28,7 +28,6 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--end::Fonts -->
 
 		<!--begin::Page Vendors Styles(used by this page) -->
-		<link href="assets/plugins/custom/datatables/datatables.bundle.css" rel="stylesheet" type="text/css">
 
 		<!--end::Page Vendors Styles -->
 
@@ -112,7 +111,7 @@ License: You must have a valid license purchased only from themeforest(the above
 								<h4 class="sidebar-logo">SUPERVISOR STUDIO PAGE</h4>
 							</div>
                             <ul class="kt-menu__nav ">
-								<li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="user_supervisor_studio/index.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+								<li class="kt-menu__item " aria-haspopup="true"><a href="user_supervisor_studio/index.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 									<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 										<polygon id="Bound" points="0 0 24 0 24 24 0 24" />
 										<path d="M12.9336061,16.072447 L19.36,10.9564761 L19.5181585,10.8312381 C20.1676248,10.3169571 20.2772143,9.3735535 19.7629333,8.72408713 C19.6917232,8.63415859 19.6104327,8.55269514 19.5206557,8.48129411 L12.9336854,3.24257445 C12.3871201,2.80788259 11.6128799,2.80788259 11.0663146,3.24257445 L4.47482784,8.48488609 C3.82645598,9.00054628 3.71887192,9.94418071 4.23453211,10.5925526 C4.30500305,10.6811601 4.38527899,10.7615046 4.47382636,10.8320511 L4.63,10.9564761 L11.0659024,16.0730648 C11.6126744,16.5077525 12.3871218,16.5074963 12.9336061,16.072447 Z" id="Shape" fill="#000000" fill-rule="nonzero" />
@@ -147,7 +146,7 @@ License: You must have a valid license purchased only from themeforest(the above
 										</ul>
 									</div>
 								</li>
-								<li class="kt-menu__item  kt-menu__item--submenu" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+								<li class="kt-menu__item  kt-menu__item--submenu kt-menu__item--open kt-menu__item--here" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 								    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 								        <polygon id="Shape" points="0 0 24 0 24 24 0 24"/>
 								        <path d="M12,11 C9.790861,11 8,9.209139 8,7 C8,4.790861 9.790861,3 12,3 C14.209139,3 16,4.790861 16,7 C16,9.209139 14.209139,11 12,11 Z" id="Mask" fill="#000000" fill-rule="nonzero" opacity="0.3"/>
@@ -156,7 +155,7 @@ License: You must have a valid license purchased only from themeforest(the above
 								</svg></span><span class="kt-menu__link-text">Profile</span><i class="kt-menu__ver-arrow la la-angle-right"></i></a>
 									<div class="kt-menu__submenu "><span class="kt-menu__arrow"></span>
 										<ul class="kt-menu__subnav">
-											<li class="kt-menu__item " aria-haspopup="true"><a href="user_supervisor_studio/profile_biodata.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Biodata</span></a></li>
+											<li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="user_supervisor_studio/profile_biodata.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Biodata</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_supervisor_studio/profile_kehadiran.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Kehadiran</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_supervisor_studio/profile_payroll.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Payroll</span></a></li>
 										</ul>
@@ -279,10 +278,13 @@ License: You must have a valid license purchased only from themeforest(the above
 							<div class="kt-container  kt-container--fluid ">
 								<div class="kt-subheader__main">
 									<h3 class="kt-subheader__title">
-										Dashboard </h3>
+										Profile </h3>
 									<span class="kt-subheader__separator kt-hidden"></span>
 									<div class="kt-subheader__breadcrumbs">
-										<a href="user_supervisor_studio/index.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
+										<a href="user_supervisor_studio/profile_biodata.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
+										<span class="kt-subheader__breadcrumbs-separator"></span>
+										<a href="user_supervisor_studio/profile_biodata.html" class="kt-subheader__breadcrumbs-link">
+											Biodata </a>
 									</div>
 								</div>
 							</div>
@@ -293,8 +295,95 @@ License: You must have a valid license purchased only from themeforest(the above
 						<!-- begin:: Content -->
 						<div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
 
+                            <div class="row row-centered">
 
+								<div class="col-12">
 
+                                    <!--begin::Portlet-->
+									<div class="kt-portlet">
+										<div class="kt-portlet__head">
+											<div class="kt-portlet__head-label">
+												<span class="kt-portlet__head-icon">
+													<i class="flaticon2-user-outline-symbol"></i>
+												</span>
+												<h3 class="kt-portlet__head-title">
+													Biodata
+												</h3>
+											</div>
+										</div>
+										<div class="kt-portlet__body">
+                                            <div class="row">
+                                                <div class="col-lg-6 kt-margin-b-10">
+                                                    <div class="form-group row">
+                                                        <label for="example-text-input" class="col-3 col-form-label">Nama</label>
+                                                        <div class="col-9">
+                                                            <input type="text" class="form-control" name="karyawan_nama" value="Ica" readonly>
+                                                        </div>
+                                                    </div>
+                                                    <div class="form-group row">
+                                                        <label for="example-text-input" class="col-3 col-form-label">Jabatan</label>
+                                                        <div class="col-9">
+                                                            <input type="text" class="form-control" name="karyawan_jabatan" value="Supervisor Studio" readonly>
+                                                        </div>
+                                                    </div>
+                                                    <div class="form-group row">
+                                                        <label for="example-text-input" class="col-3 col-form-label">Alamat</label>
+                                                        <div class="col-9">
+                                                            <input type="text" class="form-control" name="karyawan_alamat" value="Jl. Jendral Sudirman" readonly>
+                                                        </div>
+                                                    </div>
+                                                    <div class="form-group row">
+                                                        <label for="example-text-input" class="col-3 col-form-label">Email</label>
+                                                        <div class="col-9">
+                                                            <input type="text" class="form-control" name="karyawan_email" value="ica@gmail.com" readonly>
+                                                        </div>
+                                                    </div>
+                                                    <div class="form-group row">
+                                                        <label for="example-text-input" class="col-3 col-form-label">No. HP</label>
+                                                        <div class="col-9">
+                                                            <input type="text" class="form-control" name="karyawan_telepon" value="081392385697" readonly>
+                                                        </div>
+                                                    </div>
+                                                    <div class="form-group row">
+                                                        <label for="example-text-input" class="col-3 col-form-label">Username</label>
+                                                        <div class="col-9">
+                                                            <input type="text" class="form-control" name="karyawan_username" value="ica" readonly>
+                                                        </div>
+                                                    </div>
+                                                    <div class="form-group row">
+                                                        <label for="example-text-input" class="col-3 col-form-label">Password</label>
+                                                        <div class="col-9">
+                                                            <input type="text" class="form-control" name="karyawan_password" value="123456" readonly>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="col-lg-6 kt-margin-b-10">
+                                                    <div class="form-group row">
+                                                        <label for="example-text-input" class="col-3 col-form-label">Gaji Pokok</label>
+                                                        <div class="col-9">
+                                                            <input type="text" class="form-control" name="karyawan_gaji" value="Rp. 6.000.000,00" readonly>
+                                                        </div>
+                                                    </div>
+                                                    <div class="form-group row">
+                                                        <label for="example-text-input" class="col-3 col-form-label">Tipe Komisi</label>
+                                                        <div class="col-9">
+                                                            <input type="text" class="form-control" name="karyawan_komisi" value="Pokok" readonly>
+                                                        </div>
+                                                    </div>
+                                                    <div class="form-group row">
+                                                        <label for="example-text-input" class="col-3 col-form-label">Bagian</label>
+                                                        <div class="col-9">
+                                                            <input type="text" class="form-control" name="karyawan_bagian" value="Eyelash" readonly>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+										</div>
+									</div>
+
+									<!--end::Portlet-->
+								</div>
+							</div>
 						</div>
 
 						<!-- end:: Content -->
