therapist complaint side dipindahkan ke dropdown profile

--- a/user_therapist/profile_biodata.html
+++ b/user_therapist/profile_biodata.html
@@ -131,14 +131,6 @@ License: You must have a valid license purchased only from themeforest(the above
 								        <rect fill="#000000" opacity="0.3" x="10" y="17" width="7" height="2" rx="1"/>
 								    </g>
 								</svg></span><span class="kt-menu__link-text">List Treatment</span></a></li>
-                                <li class="kt-menu__item " aria-haspopup="true"><a href="user_therapist/complaint.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
-								    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-								        <rect x="0" y="0" width="24" height="24"/>
-								        <circle fill="#000000" opacity="0.3" cx="12" cy="12" r="10"/>
-								        <rect fill="#000000" x="11" y="7" width="2" height="8" rx="1"/>
-								        <rect fill="#000000" x="11" y="16" width="2" height="2" rx="1"/>
-								    </g>
-								</svg></span><span class="kt-menu__link-text">Complaint</span></a></li>
 								<li class="kt-menu__item" aria-haspopup="true"><a href="user_therapist/inventory.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 									<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 										<rect id="bound" x="0" y="0" width="24" height="24" />
@@ -157,6 +149,7 @@ License: You must have a valid license purchased only from themeforest(the above
 										<ul class="kt-menu__subnav">
 											<li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="user_therapist/profile_biodata.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Biodata</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_therapist/profile_kehadiran.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Kehadiran</span></a></li>
+											<li class="kt-menu__item " aria-haspopup="true"><a href="user_therapist/profile_complaint.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Complaint</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_therapist/profile_payroll.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Payroll</span></a></li>
 										</ul>
 									</div>
