--- a/user_therapist/profile_complaint.html
+++ b/user_therapist/profile_complaint.html
@@ -132,14 +132,6 @@ License: You must have a valid license purchased only from themeforest(the above
 								        <rect fill="#000000" opacity="0.3" x="10" y="17" width="7" height="2" rx="1"/>
 								    </g>
 								</svg></span><span class="kt-menu__link-text">List Treatment</span></a></li>
-                                <li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="user_therapist/complaint.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
-								    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-								        <rect x="0" y="0" width="24" height="24"/>
-								        <circle fill="#000000" opacity="0.3" cx="12" cy="12" r="10"/>
-								        <rect fill="#000000" x="11" y="7" width="2" height="8" rx="1"/>
-								        <rect fill="#000000" x="11" y="16" width="2" height="2" rx="1"/>
-								    </g>
-								</svg></span><span class="kt-menu__link-text">Complaint</span></a></li>
 								<li class="kt-menu__item" aria-haspopup="true"><a href="user_therapist/inventory.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 									<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 										<rect id="bound" x="0" y="0" width="24" height="24" />
@@ -147,7 +139,7 @@ License: You must have a valid license purchased only from themeforest(the above
 										<path d="M4.21611835,7.74669402 C4.30015839,7.64056877 4.40623188,7.55087574 4.5299008,7.48500698 L11.5299008,3.75665466 C11.8237589,3.60013944 12.1762411,3.60013944 12.4700992,3.75665466 L19.4700992,7.48500698 C19.5654307,7.53578262 19.6503066,7.60071528 19.7226939,7.67641889 L12.0479413,12.1074394 C11.9974761,12.1365754 11.9509488,12.1699127 11.9085461,12.2067543 C11.8661433,12.1699127 11.819616,12.1365754 11.7691509,12.1074394 L4.21611835,7.74669402 Z" id="Path" fill="#000000" opacity="0.3" />
 									</g>
 								</svg></span><span class="kt-menu__link-text">Inventory</span></a></li>
-								<li class="kt-menu__item  kt-menu__item--submenu" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+								<li class="kt-menu__item  kt-menu__item--submenu kt-menu__item--open kt-menu__item--here" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 								    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 								        <polygon id="Shape" points="0 0 24 0 24 24 0 24"/>
 								        <path d="M12,11 C9.790861,11 8,9.209139 8,7 C8,4.790861 9.790861,3 12,3 C14.209139,3 16,4.790861 16,7 C16,9.209139 14.209139,11 12,11 Z" id="Mask" fill="#000000" fill-rule="nonzero" opacity="0.3"/>
@@ -158,6 +150,7 @@ License: You must have a valid license purchased only from themeforest(the above
 										<ul class="kt-menu__subnav">
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_therapist/profile_biodata.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Biodata</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_therapist/profile_kehadiran.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Kehadiran</span></a></li>
+											<li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="user_therapist/profile_complaint.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Complaint</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_therapist/profile_payroll.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Payroll</span></a></li>
 										</ul>
 									</div>
