User supervisor studio stock and request revision based on sheet

--- a/user_supervisor_studio/request_in.html
+++ b/user_supervisor_studio/request_in.html
@@ -323,7 +323,7 @@ License: You must have a valid license purchased only from themeforest(the above
 											<form class="kt-form kt-form--fit kt-margin-b-10">
     											<div class="row justify-space-between">
 													<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
-														<input readonly type="text" class="form-control kt-input" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu"/>
+														<input readonly type="text" class="form-control kt-input" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_month"/>
 														<div class="input-group-append">
 															<span class="input-group-text">
 																<i class="la la-calendar"></i>
