--- a/user_supervisor_studio/request_out_new.html
+++ b/user_supervisor_studio/request_out_new.html
@@ -371,9 +371,9 @@ License: You must have a valid license purchased only from themeforest(the above
                                                     </tr>
                                                 </tbody>
                                             </table>
-                                            <!-- <div style="padding:0px;text-align:center;">
+                                            <div style="padding:0px;text-align:center;">
                                                 <button type="button" class="btn btn-link" style="padding-right:0px;" id="item_add"><i class="flaticon-add"></i>Tambah Item</button>
-                                            </div> -->
+                                            </div>
                                             <div style="text-align: center; margin-top: 50px">
                                                 <button type="reset" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                                                 <button type="submit" class="btn btn-success" id="kt_sweetalert_request_berhasil">Submit</button>
