--- a/user_supervisor_studio/stock_detail.html
+++ b/user_supervisor_studio/stock_detail.html
@@ -369,6 +369,21 @@ License: You must have a valid license purchased only from themeforest(the above
 											</div>
 										</div>
 										<div class="kt-portlet__body">
+											<form class="kt-form kt-form--fit kt-margin-b-10">
+    											<div class="row justify-space-between">
+													<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
+														<input readonly type="text" class="form-control kt-input_month" name="start" placeholder="Pilih Bulan" data-col-index="1" id="kt_search_month"/>
+														<div class="input-group-append">
+															<span class="input-group-text">
+																<i class="la la-calendar"></i>
+															</span>
+														</div>
+													</div>
+													<div class="col-lg-4 col-sm-6">
+	    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
+													</div>
+    											</div>
+    										</form>
                                             <table class="table table-bordered table-hover table-checkable" id="table_stock_detail"></table>
 										</div>
 										<div class="kt-portlet__foot kt-hidden">
@@ -503,6 +518,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
 		<!--begin::Page Scripts(used by this page) -->
 		<script src="assets/js/script/datatable_supervisor_studio.js"></script>
+		<script src="assets/js/custom/datepicker.js" type="text/javascript"></script>
 
         <script>
 			//Sweetalert
